--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Eksempel 2</title>
+  <title>Eksempel 3</title>
 </head>
 <body>
-  <h3>Eksempel 2</h3>
+  <h3>Eksempel 3</h3>
     
-  <form method="post" action="eksempel-2.php" id="eksempel2" name="eksempel2">
-    Trykk Fortsett for &aring; skrive ut tallene fra 1 til 10  <br/>
+  <form method="post" action="eksempel-3.php" id="eksempel3" name="eksempel3">
+    Trykk Fortsett for &aring; skrive ut noen navn  <br/>
     <input type="submit" value="Fortsett" id="fortsett" name="fortsett" /> <br />
   </form>
 </body>
