--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Eksempel 3</title>
+  <title>Eksempel 4</title>
 </head>
 <body>
-  <h3>Eksempel 3</h3>
+  <h3>Eksempel 4</h3>
     
-  <form method="post" action="eksempel-3.php" id="eksempel3" name="eksempel3">
-    Trykk Fortsett for &aring; skrive ut noen navn  <br/>
+  <form method="post" action="eksempel-4.php" id="eksempel4" name="eksempel4">
+    Trykk Fortsett for &aring; skrive ut antall dager i hver m&aring;ned  <br/>
     <input type="submit" value="Fortsett" id="fortsett" name="fortsett" /> <br />
   </form>
 </body>
