--- a/eksempel-4.html
+++ b/eksempel-4.html
@@ -7,8 +7,10 @@
   <h3>Eksempel 4</h3>
     
   <form method="post" action="eksempel-4.php" id="eksempel4" name="eksempel4">
-    Trykk Fortsett for &aring; skrive ut antall dager i hver m&aring;ned  <br/>
-    <input type="submit" value="Fortsett" id="fortsett" name="fortsett" /> <br />
+    Er du student ? <input type="text" id="student" name="student"   /> <br />
+    Hvor gammel er du ? <input type="text" id="alder" name="alder"   /> <br />
+    <input type="submit" value="Fortsett" id="fortsett" name="fortsett" />
+    <input type="reset" value="Nullstill" name="nullstill" id="nullstill" /> <br />
   </form>
 </body>
 </html>
