--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Eksempel 5</title>
+  <title>Eksempel 1</title>
 </head>
 <body>
-  <h3>Eksempel 5</h3>
+  <h3>Eksempel 1</h3>
     
-  <form method="post" action="eksempel-5.php" id="eksempel5" name="eksempel5">
-    Trykk Fortsett for &aring; vise oppdeling av en tekststreng  <br/>
-    <input type="submit" value="Fortsett" id="fortsett" name="fortsett" /> <br />
+  <form method="post" action="eksempel-1.php" id="eksempel1" name="eksempel1">
+    Hva er 3 ganger 3 ? <input type="text" id="svar" name="svar" required  /> <br />
+    <input type="submit" value="Fortsett" id="fortsett" name="fortsett" />
+    <input type="reset" value="Nullstill" name="nullstill" id="nullstill" /> <br />
   </form>
 </body>
 </html>
