--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Eksempel 1</title>
+  <title>Eksempel 3</title>
 </head>
 <body>
-  <h3>Eksempel 1</h3>
+  <h3>Eksempel 3</h3>
     
-  <form method="post" action="eksempel-1.php" id="eksempel1" name="eksempel1">
-    Hva er 3 ganger 3 ? <input type="text" id="svar" name="svar" required  /> <br />
+  <form method="post" action="eksempel-3.php" id="eksempel3" name="eksempel3">
+    Er du student (j/n) ? <input type="text" id="svar" name="svar"  /> <br />
     <input type="submit" value="Fortsett" id="fortsett" name="fortsett" />
     <input type="reset" value="Nullstill" name="nullstill" id="nullstill" /> <br />
   </form>
