--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Eksempel 2</title>
+  <title>Eksempel 3</title>
 </head>
 <body>
-	<h3>Eksempel 2 </h3>
+  <h3>Eksempel 3 (validering av postnr) </h3>
     
-    <form method="post" action="eksempel-2.php" id="eksempel2" name="eksempel2">
-        Fornavn <input type="text" id="fornavn" name="fornavn" required /> <br />
-        Etternavn <input type="text" id="etternavn" name="etternavn" required /> <br />
-		<input type="submit" value="Fortsett" id="fortsett" name="fortsett" />
-		<input type="reset" value="Nullstill" name="nullstill" id="nullstill" /> <br />
-	</form>
+  <form method="post" action="eksempel-3.php" id="registrerPostnrSkjema" name="registrerPostnrSkjema" >
+    Postnr <input type="text" name="postnr" id="postnr"> <font color="#FF0000">*</font> <em> (postnr skal inneholde 4 siffre)</em> <br />
+    <input type="submit" value="Registrer postnr" id="registrerPostnrKnapp" name="registrerPostnrKnapp" />
+    <input type="reset" value="Nullstill" name="nullstill" id="nullstill" /> <br />
+  </form>
 </body>
 </html>
-
