--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Eksempel 3</title>
+  <title>Eksempel 4</title>
 </head>
 <body>
-  <h3>Eksempel 3 (validering av postnr) </h3>
+  <h3>Eksempel 4 (validering av klassekode) </h3>
     
-  <form method="post" action="eksempel-3.php" id="registrerPostnrSkjema" name="registrerPostnrSkjema" >
-    Postnr <input type="text" name="postnr" id="postnr"> <font color="#FF0000">*</font> <em> (postnr skal inneholde 4 siffre)</em> <br />
-    <input type="submit" value="Registrer postnr" id="registrerPostnrKnapp" name="registrerPostnrKnapp" />
+  <form method="post" action="eksempel-4.php" id="registrerKlassekodeSkjema" name="registrerKlassekodeSkjema" >
+    Klassekode <input type="text" name="klassekode" id="klassekode"> <font color="#FF0000">*</font> <em> (klassekode skal inneholde 2 bokstaver og 1 siffer)</em> <br />
+    <input type="submit" value="Registrer klassekode" id="registrerKlassekodeKnapp" name="registrerKlassekodeKnapp" />
     <input type="reset" value="Nullstill" name="nullstill" id="nullstill" /> <br />
   </form>
 </body>
