--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Eksempel 5</title>
+  <title>Eksempel 1</title>
 </head>
 <body>
-  <h3>Eksempel 5 (validering av emnekode) </h3>
+  <h3>Eksempel 1</h3>
     
-  <form method="post" action="eksempel-5.php" id="registrerKlassekodeSkjema" name="registrerKlassekodeSkjema" >
-    Emnekode <input type="text" name="emnekode" id="emnekode"> 
-    <font color="#FF0000">*</font> <em> (fagkode skal inneholde 3 bokstaver, 3 siffre og 1 bokstav/siffer)</em> <br />
-    <input type="submit" value="Registrer emnekode" id="registrerEmnekodeKnapp" name="registrerEmnekodeKnapp" />
-    <input type="reset" value="Nullstill" name="nullstill" id="nullstill" /> <br />
+  <form method="post" action="eksempel-1.py" id="eksempel1" name="eksempel1">
+    <input type="submit" value="Fortsett" id="fortsett" name="fortsett" />
   </form>
 </body>
 </html>
