--- a/index.html
+++ b/index.html
@@ -20,13 +20,9 @@
 
 <h2>Brukerfunksjoner</h2>
 <ul>
-  <li><a href="registrer-klasse.php" target="_blank">Registrer klasse </a></li>
-  <li><a href="vis-alle-klasser.php" target="_blank">Vis alle klasser</a></li>
-  <li><a href="slett-klasse.php" target="_blank">Slett klasse</a></li>
-  <li></li>
-  <li><a href="registrer-student.php" target="_blank">Registrer student  </a></li>
-  <li><a href="vis-alle-studenter.php" target="_blank">Vis alle studenter</a></li>
-  <li><a href="slett-student.php" target="_blank">Slett student</a></li>
+  <li><a href="1-vis-alle-poststeder.php" target="_blank">Vis alle poststeder</a></li>
+  <li><a href="2-registrer-poststed.php" target="_blank">Registrer poststed </a></li>
+  <li><a href="3-slett-poststed.php" target="_blank">Slett poststed</a></li>
 </ul>
 <h3>&nbsp;</h3>
 <p>&nbsp;</p>
