--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   <li><a href="1-vis-alle-poststeder.php" target="_blank">Vis alle poststeder</a></li>
   <li><a href="2-registrer-poststed.php" target="_blank">Registrer poststed </a></li>
   <li><a href="3-slett-poststed.php" target="_blank">Slett poststed</a></li>
+  <li></li>
+  <li><a href="0-opprett-poststedtabell.php" target="_blank">Opprett poststedtabell</a></li>
 </ul>
 <h3>&nbsp;</h3>
 <p>&nbsp;</p>
