--- a/index.html
+++ b/index.html
@@ -18,13 +18,11 @@
 </head>
 <body bgcolor="#FFFFFF">
 
-<h2>Brukerfunksjoner</h2>
+<h2>Eksempler til tema 1</h2>
 <ul>
-  <li><a href="1-vis-alle-poststeder.php" target="_blank">Vis alle poststeder</a></li>
-  <li><a href="2-registrer-poststed.php" target="_blank">Registrer poststed </a></li>
-  <li><a href="3-slett-poststed.php" target="_blank">Slett poststed</a></li>
-  <li></li>
-  <li><a href="0-opprett-poststedtabell.php" target="_blank">Opprett poststedtabell</a></li>
+  <li><a href="eksempel-1.html" target="_blank">Eksempel 1</a></li>
+  <li><a href="eksempel-2.html" target="_blank">Eksempel 2  </a></li>
+  <li><a href="eksempel-3.html" target="_blank">Eksempel 3 </a></li>
 </ul>
 <h3>&nbsp;</h3>
 <p>&nbsp;</p>
