--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 </head>
 <body bgcolor="#FFFFFF">
 
-<h2>Eksempler til tema 1</h2>
+<h2>Eksempler til tema 2</h2>
 <ul>
   <li><a href="eksempel-1.html" target="_blank">Eksempel 1</a></li>
   <li><a href="eksempel-2.html" target="_blank">Eksempel 2  </a></li>
   <li><a href="eksempel-3.html" target="_blank">Eksempel 3 </a></li>
+  <li><a href="eksempel-4.html" target="_blank">Eksempel 4 </a></li>
 </ul>
 <h3>&nbsp;</h3>
 <p>&nbsp;</p>
