--- a/eksempel-3.html
+++ b/eksempel-3.html
@@ -7,9 +7,8 @@
   <h3>Eksempel 3</h3>
     
   <form method="post" action="eksempel-3.php" id="eksempel3" name="eksempel3">
-    Er du student (j/n) ? <input type="text" id="svar" name="svar"  /> <br />
-    <input type="submit" value="Fortsett" id="fortsett" name="fortsett" />
-    <input type="reset" value="Nullstill" name="nullstill" id="nullstill" /> <br />
+    Trykk Fortsett for &aring; skrive ut noen navn  <br/>
+    <input type="submit" value="Fortsett" id="fortsett" name="fortsett" /> <br />
   </form>
 </body>
 </html>
