--- a/eksempel-1.html
+++ b/eksempel-1.html
@@ -7,9 +7,8 @@
   <h3>Eksempel 1</h3>
     
   <form method="post" action="eksempel-1.php" id="eksempel1" name="eksempel1">
-    Hva er 3 ganger 3 ? <input type="text" id="svar" name="svar" required  /> <br />
-    <input type="submit" value="Fortsett" id="fortsett" name="fortsett" />
-    <input type="reset" value="Nullstill" name="nullstill" id="nullstill" /> <br />
+    Trykk Fortsett for &aring; skrive ut tallene fra 1 til 10  <br/>
+    <input type="submit" value="Fortsett" id="fortsett" name="fortsett" /> <br />
   </form>
 </body>
 </html>
