--- a/eksempel-2.html
+++ b/eksempel-2.html
@@ -7,10 +7,8 @@
   <h3>Eksempel 2</h3>
     
   <form method="post" action="eksempel-2.php" id="eksempel2" name="eksempel2">
-    Tall 1<input type="text" id="tall1" name="tall1" required /> <br />
-    Tall 2<input type="text" id="tall2" name="tall2" required /> <br />
-    <input type="submit" value="Fortsett" id="fortsett" name="fortsett" />
-    <input type="reset" value="Nullstill" name="nullstill" id="nullstill" /> <br />
+    Trykk Fortsett for &aring; skrive ut tallene fra 1 til 10  <br/>
+    <input type="submit" value="Fortsett" id="fortsett" name="fortsett" /> <br />
   </form>
 </body>
 </html>
