--- a/eksempel-1.html
+++ b/eksempel-1.html
@@ -7,8 +7,10 @@
   <h3>Eksempel 1</h3>
     
   <form method="post" action="eksempel-1.php" id="eksempel1" name="eksempel1">
-    Trykk Fortsett for &aring; skrive ut tallene fra 1 til 10  <br/>
-    <input type="submit" value="Fortsett" id="fortsett" name="fortsett" /> <br />
+    Fornavn <input type="text" id="fornavn" name="fornavn" required /> <br />
+    Etternavn <input type="text" id="etternavn" name="etternavn" required /> <br />
+    <input type="submit" value="Fortsett" id="fortsett" name="fortsett" />
+    <input type="reset" value="Nullstill" name="nullstill" id="nullstill" /> <br />
   </form>
 </body>
 </html>
