--- a/eksempel-2.html
+++ b/eksempel-2.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Eksempel 2</title>
+	<title>Eksempel 2</title>
 </head>
 <body>
-  <h3>Eksempel 2</h3>
+	<h3>Eksempel 2 </h3>
     
-  <form method="post" action="eksempel-2.php" id="eksempel2" name="eksempel2">
-    Trykk Fortsett for &aring; skrive ut tallene fra 1 til 10  <br/>
-    <input type="submit" value="Fortsett" id="fortsett" name="fortsett" /> <br />
-  </form>
+    <form method="post" action="eksempel-2.php" id="eksempel2" name="eksempel2">
+        Fornavn <input type="text" id="fornavn" name="fornavn" required /> <br />
+        Etternavn <input type="text" id="etternavn" name="etternavn" required /> <br />
+		<input type="submit" value="Fortsett" id="fortsett" name="fortsett" />
+		<input type="reset" value="Nullstill" name="nullstill" id="nullstill" /> <br />
+	</form>
 </body>
 </html>
+
