--- a/eksempel-3.html
+++ b/eksempel-3.html
@@ -4,11 +4,12 @@
   <title>Eksempel 3</title>
 </head>
 <body>
-  <h3>Eksempel 3</h3>
+  <h3>Eksempel 3 (validering av postnr) </h3>
     
-  <form method="post" action="eksempel-3.php" id="eksempel3" name="eksempel3">
-    Trykk Fortsett for &aring; skrive ut noen navn  <br/>
-    <input type="submit" value="Fortsett" id="fortsett" name="fortsett" /> <br />
+  <form method="post" action="eksempel-3.php" id="registrerPostnrSkjema" name="registrerPostnrSkjema" >
+    Postnr <input type="text" name="postnr" id="postnr"> <font color="#FF0000">*</font> <em> (postnr skal inneholde 4 siffre)</em> <br />
+    <input type="submit" value="Registrer postnr" id="registrerPostnrKnapp" name="registrerPostnrKnapp" />
+    <input type="reset" value="Nullstill" name="nullstill" id="nullstill" /> <br />
   </form>
 </body>
 </html>
