--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body bgcolor="#FFFFFF">
 
-<h2>Brukerfunksjoner</h2>
+<h2>Eksempler til tema 5</h2>
 <ul>
   <li><a href="1-vis-alle-poststeder.php" target="_blank">Vis alle poststeder</a></li>
   <li><a href="2-registrer-poststed.php" target="_blank">Registrer poststed </a></li>
