--- a/index.html
+++ b/index.html
@@ -24,8 +24,16 @@
   <li><a href="tema01/eksempel-2.html" target="_blank">Eksempel 2  </a></li>
   <li><a href="tema01/eksempel-3.html" target="_blank">Eksempel 3 </a></li>
 </ul>
-<h3>&nbsp;</h3>
-<p>&nbsp;</p>
-<h3>&nbsp;</h3>
+
+
+<h2>Eksempler til tema 2</h2>
+<ul>
+  <li><a href="tema02/eksempel-1.html" target="_blank">Eksempel 1</a></li>
+  <li><a href="tema02/ksempel-2.php" target="_blank">Eksempel 2  </a></li>
+  <li><a href="tema02/eksempel-3.html" target="_blank">Eksempel 3 </a></li>
+  <li><a href="tema02/eksempel-4.html" target="_blank">Eksempel 4 </a></li>
+</ul>
+
+
 </body>
 </html>
