--- a/tema02/eksempel-3.html
+++ b/tema02/eksempel-3.html
@@ -6,7 +6,7 @@
 <body>
   <h3>Eksempel 3</h3>
     
-  <form method="post" action="eksempel-3.php" id="eksempel3" name="eksempel3">
+  <form method="post" action="tema02/eksempel-3.php" id="eksempel3" name="eksempel3">
     Er du student (j/n) ? <input type="text" id="svar" name="svar"  /> <br />
     <input type="submit" value="Fortsett" id="fortsett" name="fortsett" />
     <input type="reset" value="Nullstill" name="nullstill" id="nullstill" /> <br />
