--- a/tema03/eksempel-2.html
+++ b/tema03/eksempel-2.html
@@ -6,7 +6,7 @@
 <body>
   <h3>Eksempel 2</h3>
     
-  <form method="post" action="eksempel-2.php" id="eksempel2" name="eksempel2">
+  <form method="post" action="tema03/eksempel-2.php" id="eksempel2" name="eksempel2">
     Trykk Fortsett for &aring; skrive ut tallene fra 1 til 10  <br/>
     <input type="submit" value="Fortsett" id="fortsett" name="fortsett" /> <br />
   </form>
