--- a/tema03/eksempel-3.html
+++ b/tema03/eksempel-3.html
@@ -6,7 +6,7 @@
 <body>
   <h3>Eksempel 3</h3>
     
-  <form method="post" action="eksempel-3.php" id="eksempel3" name="eksempel3">
+  <form method="post" action="tema03/eksempel-3.php" id="eksempel3" name="eksempel3">
     Trykk Fortsett for &aring; skrive ut noen navn  <br/>
     <input type="submit" value="Fortsett" id="fortsett" name="fortsett" /> <br />
   </form>
