--- a/tema03/eksempel-5.html
+++ b/tema03/eksempel-5.html
@@ -6,7 +6,7 @@
 <body>
   <h3>Eksempel 5</h3>
     
-  <form method="post" action="eksempel-5.php" id="eksempel5" name="eksempel5">
+  <form method="post" action="tema03/eksempel-5.php" id="eksempel5" name="eksempel5">
     Trykk Fortsett for &aring; vise oppdeling av en tekststreng  <br/>
     <input type="submit" value="Fortsett" id="fortsett" name="fortsett" /> <br />
   </form>
