--- a/tema04/eksempel-2.html
+++ b/tema04/eksempel-2.html
@@ -6,7 +6,7 @@
 <body>
 	<h3>Eksempel 2 </h3>
     
-    <form method="post" action="eksempel-2.php" id="eksempel2" name="eksempel2">
+    <form method="post" action="tema04/eksempel-2.php" id="eksempel2" name="eksempel2">
         Fornavn <input type="text" id="fornavn" name="fornavn" required /> <br />
         Etternavn <input type="text" id="etternavn" name="etternavn" required /> <br />
 		<input type="submit" value="Fortsett" id="fortsett" name="fortsett" />
