--- a/tema04/eksempel-3.html
+++ b/tema04/eksempel-3.html
@@ -6,7 +6,7 @@
 <body>
   <h3>Eksempel 3 (validering av postnr) </h3>
     
-  <form method="post" action="eksempel-3.php" id="registrerPostnrSkjema" name="registrerPostnrSkjema" >
+  <form method="post" action="tema04/eksempel-3.php" id="registrerPostnrSkjema" name="registrerPostnrSkjema" >
     Postnr <input type="text" name="postnr" id="postnr"> <font color="#FF0000">*</font> <em> (postnr skal inneholde 4 siffre)</em> <br />
     <input type="submit" value="Registrer postnr" id="registrerPostnrKnapp" name="registrerPostnrKnapp" />
     <input type="reset" value="Nullstill" name="nullstill" id="nullstill" /> <br />
