--- a/tema04/eksempel-4.html
+++ b/tema04/eksempel-4.html
@@ -6,7 +6,7 @@
 <body>
   <h3>Eksempel 4 (validering av klassekode) </h3>
     
-  <form method="post" action="eksempel-4.php" id="registrerKlassekodeSkjema" name="registrerKlassekodeSkjema" >
+  <form method="post" action="tema04/eksempel-4.php" id="registrerKlassekodeSkjema" name="registrerKlassekodeSkjema" >
     Klassekode <input type="text" name="klassekode" id="klassekode"> <font color="#FF0000">*</font> <em> (klassekode skal inneholde 2 bokstaver og 1 siffer)</em> <br />
     <input type="submit" value="Registrer klassekode" id="registrerKlassekodeKnapp" name="registrerKlassekodeKnapp" />
     <input type="reset" value="Nullstill" name="nullstill" id="nullstill" /> <br />
