--- a/innlevering1/index.html
+++ b/innlevering1/index.html
@@ -20,13 +20,13 @@
 
 <h2>Brukerfunksjoner</h2>
 <ul>
-  <li><a href="registrer-klasse.php" target="_blank">Registrer klasse </a></li>
-  <li><a href="vis-alle-klasser.php" target="_blank">Vis alle klasser</a></li>
-  <li><a href="slett-klasse.php" target="_blank">Slett klasse</a></li>
+  <li><a href="innlevering1/registrer-klasse.php" target="_blank">Registrer klasse </a></li>
+  <li><a href="innlevering1/vis-alle-klasser.php" target="_blank">Vis alle klasser</a></li>
+  <li><a href="innlevering1/slett-klasse.php" target="_blank">Slett klasse</a></li>
   <li></li>
-  <li><a href="registrer-student.php" target="_blank">Registrer student  </a></li>
-  <li><a href="vis-alle-studenter.php" target="_blank">Vis alle studenter</a></li>
-  <li><a href="slett-student.php" target="_blank">Slett student</a></li>
+  <li><a href="innlevering1/registrer-student.php" target="_blank">Registrer student  </a></li>
+  <li><a href="innlevering1/vis-alle-studenter.php" target="_blank">Vis alle studenter</a></li>
+  <li><a href="innlevering1/slett-student.php" target="_blank">Slett student</a></li>
   <li></li>
   <li><a href="innlevering1/opprett-klassetabell.php" target="_blank">Opprett klassetabell</a></li>
   <li><a href="innlevering1/opprett-studenttabell.php" target="_blank">Opprett studenttabell</a></li>
